--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^12.0.6",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
+    "mailto-link": "^2.0.0",
     "next": "15.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
