--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "20.19.4",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
+    "@types/react": "19.1.8",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
