--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@googlemaps/js-api-loader": "^1.16.10",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -23,6 +26,7 @@
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -37,14 +41,18 @@
     "next": "15.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
+    "pdf-generator": "^1.0.4",
+    "pdfmake": "^0.2.20",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-slider": "^2.0.6",
     "recharts": "^2.15.1",
-    "sonner": "^2.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vfs": "^0.2.2",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   },
@@ -52,6 +60,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "20.19.4",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "19.1.8",
     "@types/react-dom": "^19",
     "eslint": "^9",
